chore: Update Patient, HomeController, Timeslot, and Therapist classes